config/k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  ports:
    - name: web-http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    component: web
  type: NodePort
