config/k8s/app-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    component: web
  type: NodePort
