config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    networking.gke.io/managed-certificates: app-certificate
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: app-cluster-ip-service
              servicePort: 3000
